tests/semantic/fact_plus/fact_plus.dl
.type Node

.decl F (node1:number, node2:Node)
.input F ()

// ok
F(1+2,"AA").

// not ok [variable]
F(1+a,"AA").
